# controller/userController.js
@@ -31,17 +31,53 @@ const getSingleUser = async (req, res) => {
 
 
 const createUser = async (req, res) => {
+     // Validate request
+  if (!req.body.forename) {
+    res.status(400).send({ message: 'Name can not be empty!' });
+    return;
+  }
+
+  if (!req.body.surname) {
+    res.status(400).send({ message: 'Last name can not be empty!' });
+    return;
+  }
+
+   if (!req.body.email) {
+    res.status(400).send({ message: 'Email can not be empty!' });
+    return;
+  }
+
+  if (!req.body.birthday) {
+    res.status(400).send({ message: 'Birthday name can not be empty!' });
+    return;
+  }
+
+ if (!req.body.favorite_color) {
+    res.status(400).send({ message: 'Favorite color can not be empty!' });
+    return;
+  }
+
+  if (!req.body.favorite_team) {
+    res.status(400).send({ message: 'Favorite team name can not be empty!' });
+    return;
+  }
+ if (!req.body.favorite_player) {
+    res.status(400).send({ message: 'Favorite player can not be empty!' });
+    return;
+  };
+
+
     //#swagger.tags = ["Users"]
     //#swagger.summary = Create a new user
     const user = {
-        AccountID: req.body.AccountID,
-        Forename: req.body.Forename,
-        Surname: req.body.Surname,
-        Email: req.body.Email,
-        Birthday: req.body.Birthday,
-        Favorite_color: req.body.Favorite_color,
-        Favorite_team: req.body.Favorite_team,
-        Favorite_player: req.body.Favorite_player
+        accountID: req.body.accountID,
+        forename: req.body.forename,
+        surname: req.body.surname,
+        email: req.body.email,
+        birthday: req.body.birthday,
+        favorite_color: req.body.favorite_color,
+        favorite_team: req.body.favorite_team,
+        favorite_player: req.body.favorite_player
     };
     const response = await mongodb
         .getDatabase()
@@ -49,7 +85,9 @@ const createUser = async (req, res) => {
         .collection("users")
         .insertOne(user);
     if (response.acknowledged > 0){
-    res.status(204).send();
+    res.status(200).send({
+        message: 'User created with id: ' + response.insertedId
+      });
     }
     else {
     res.status(500).json(response.error || 'Some error occurred while creating the user.');
@@ -65,14 +103,14 @@ const updateUser = async (req, res) => {
     const userId = new ObjectId(req.params.id);
     const user = {
         // I would like to change the names of these fields to the names below to be more consistent accross the project and remove spaces
-        AccountID: req.body.AccountID,
-        Forename: req.body.Forename,
-        Surname: req.body.Surname,
-        Email: req.body.Email,
-        Birthday: req.body.Birthday,
-        Favorite_color: req.body.Favorite_color,
-        Favorite_team: req.body.Favorite_team,
-        Favorite_player: req.body.Favorite_player
+        accountID: req.body.accountID,
+        forename: req.body.forename,
+        surname: req.body.surname,
+        email: req.body.email,
+        birthday: req.body.birthday,
+        favorite_color: req.body.favorite_color,
+        favorite_team: req.body.favorite_team,
+        favorite_player: req.body.favorite_player
     };
     const response = await mongodb
         .getDatabase()
@@ -80,7 +118,9 @@ const updateUser = async (req, res) => {
         .collection("users")
         .replaceOne({ _id: userId }, user);
     if (response.modifiedCount > 0) {
-        res.status(204).send();
+        res.status(200).send({
+            message: 'User updated'
+          });
     } else {
         res.status(500).json(
             response.error || "Some error occured while trying to update user."
